--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -58,6 +58,9 @@
                 <p>
                 Tested the scalability of web application by generating 10000 user requests with the help of Apache Beam.
                 </p>
+                <p>
+                  Swara's addition
+                </p>
             </div>
   
           </div>
