--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -59,7 +59,7 @@
                 Tested the scalability of web application by generating 10000 user requests with the help of Apache Beam.
                 </p>
                 <p>
-                  Swara's addition
+                  Swara's addition in twiter
                 </p>
             </div>
   
