--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Twitter Analysis</h4></center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/twitteranalysis.jpg" class="img-fluid" alt="">
+            <img src="assets/img/project/twitteranalysis.jpg" class="img-fluid" alt="">f
             <div class="portfolio-info">
               
               <div class="portfolio-links">
@@ -697,7 +697,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["Aspiring Physician", "Artistic Creator", "Tech Enthusiast"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
