--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Aspiring Physician", "Artistic Creator", "Tech Enthusiast"],
+      strings: ["An Aspiring Physician", "An Artistic Creator", "A Tech Enthusiast"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
