--- a/index.html
+++ b/index.html
@@ -103,24 +103,22 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/swara.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+          <p>Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 2004</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 757-xxx-xxxx</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Virginia Beach, VA</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> swara.m.chokshi@gmail.com</li>
               </ul>
             </div>
           </div>
