--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Swara Project 1</h4></center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/wellvoyage_1270.png" class="img-fluid" alt="">f
+            <img src="assets/img/project/wellvoyage_1270.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               
               <div class="portfolio-links">
