--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -43,17 +43,17 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Image Generator</h2>
+              <h2 style="color:#12d640">Project 1</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Python, HTML, CSS, Bootstrap, GCP(Pub/Sub, Dataflow, Data Studio, GAE, BigQuery)</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/TwitterAnalysis" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li><strong>Github URL</strong>: <a href="https://swarac.github.io/" target="_blank">Project Link</a></li>
               </ul>
   
                 <p>
-                Created a web‑based elastic application to provide the user with a detailed analysis of the sentiment of users on top 10 trending movies and songs with the help of Google Cloud Platform services.              
+                  Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
                 <p>
-                Coded Pub/Sub routine to fetch 1000 tweets at a time from Twitter; used Dataflow for resource autoscaling and dynamic work rebalancing, reducing overall response time by 50\%; stored data in BigQuery table for efficiently displaying data in Google DataStudio.
+                  Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
                 <p>
                   Swara's addition in twiter
