--- a/projects/gan.html
+++ b/projects/gan.html
@@ -43,18 +43,21 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Image Generator</h2>
+            <h2 style="color:#12d640">Project 1</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Tensorflow, Python, numpy, keras, pandas</li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/Generative_Model" target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>: Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+              <li><strong>Github URL</strong>: <a href="https://swarac.github.io/" target="_blank">Project Link</a></li>
             </ul>
 
-            <p>
-              Developed an image generator based on Generative Adversarial Network (GAN) which aims at generating a set of realistic images (fake images which look like real) from a real dataset.            
-            </p>
-            <p>
-              The developed system was tested on a human-face database and loss was calculated by comparing the PCAs of generated and the original image.            
-            </p>
+              <p>
+                Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <p>
+                Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <p>
+                Swara's addition in twiter
+              </p>
           </div>
 
         </div>
