--- a/projects/ml.html
+++ b/projects/ml.html
@@ -43,17 +43,21 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">ML-DL web app</h2>
-
+            <h2 style="color:#12d640">Project 1</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Flask, Python, Heroku, SQlite, HTML, CSS</li>
-                <li><strong>Website URL</strong>: <a href="https://ml-dl-webapp.herokuapp.com/" target="_blank">Link</a></li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ML_DL_WebApp" target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>: Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+              <li><strong>Github URL</strong>: <a href="https://swarac.github.io/" target="_blank">Project Link</a></li>
             </ul>
 
-            <p>
-              The web app created for showcasing machine learning and deep learning projects. The app consists of the flask as backend and bootstrap for the frontend part. The projects include text summarizer, image classifier and iris classifier.            
-            </p>
+              <p>
+                Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <p>
+                Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <p>
+                Swara's addition in twiter
+              </p>
           </div>
 
         </div>
