--- a/projects/recommender.html
+++ b/projects/recommender.html
@@ -43,19 +43,21 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Movie Recommender</h2>
+              <h2 style="color:#12d640">Project 1</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, JavaScript, Bootstrap, SQLite, Pandas, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://awesome-movie-recommender.herokuapp.com/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/movie_recommender" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li><strong>Github URL</strong>: <a href="https://swarac.github.io/" target="_blank">Project Link</a></li>
               </ul>
   
-              <p>
-                Django based movie recommender system. I have used collaborative filtering technique to recommend movies to the users.             
-              </p>
-              <p>
-                User can register/login to the web app. Search through different movies and explore them. User can get movie recommendations based on the ratings he/she gives to the movie. User can add movies to their watch list.              
-              </p>
+                <p>
+                  Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <p>
+                  Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <p>
+                  Swara's addition in twiter
+                </p>
             </div>
   
           </div>
