--- a/projects/ml.html
+++ b/projects/ml.html
@@ -56,7 +56,7 @@
                 Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
               <p>
-                Swara's addition in twiter
+                Swara's addition in twit
               </p>
           </div>
 
