--- a/index.html
+++ b/index.html
@@ -577,10 +577,10 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>1275 E University Dr</p>
-            <p>Unit 212</p>
-            <p>Tempe, AZ 85281</p>
+            <h3>School Address</h3>
+            <p>4400 Virginia Beach Blvd </p>
+            <p>Virginia Beach</p>
+            <p>Virginia 23462</p>
           </div>
         </div>
 
@@ -589,9 +589,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.linkedin.com" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://swarac.github.io/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="mailto:swara.m.chokshi@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
             </div>
           </div>
@@ -601,17 +601,10 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>rajaprerak@gmail.com</p>
-            <p>pkraja@asu.edu</p>
-          </div>
+            <p>swara.m.chokshi@gmail.com</p>
+            </div>
         </div>
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
-            <i class="bx bx-phone-call"></i>
-            <h3>Contact</h3>
-            <p>+1 480-401-8112</p>
-          </div>
-        </div>
+        
       </div>
       <!-- <div id="sfczmlqxr5caww28rswrt8849ghbekgnh3j" ></div><script type="text/javascript" src="https://counter1.stat.ovh/private/counter.js?c=zmlqxr5caww28rswrt8849ghbekgnh3j&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free web counter"><img src="https://counter1.stat.ovh/private/freecounterstat.php?c=zmlqxr5caww28rswrt8849ghbekgnh3j" border="0" title="free web counter" alt="free web counter" style="visibility: none;"></a></noscript> -->
     </div>
