--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -43,17 +43,17 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Project 1</h2>
+              <h2 style="color:#12d640">Wellvoyage</h2>
               <ul>
                 <li><strong>Tech Stack</strong>: Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
                 <li><strong>Github URL</strong>: <a href="https://swarac.github.io/" target="_blank">Project Link</a></li>
               </ul>
   
                 <p>
-                  Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Wellvoyage, a mobile application, helps to prepare medical trainees for safe global health engagement by providing a centralized resource for region-specific medical, cultural, and demographic information.
                 </p>
-                <p>
-                  Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                 <p>
+                  <img src="assets/img/eposter.png" class="img-fluid" alt="">
                 </p>
                 <p>
                   Swara's addition in twiter
