--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -53,7 +53,8 @@
                   Wellvoyage, a mobile application, helps to prepare medical trainees for safe global health engagement by providing a centralized resource for region-specific medical, cultural, and demographic information.
                 </p>
                  <p>
-                  <img src="assets/img/eposter.png" alt="">
+                  <img src="../assets/img/project/eposter.png" alt="">
+
                 </p>
                 <p>
                   Swara's addition in twiter
