--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -44,16 +44,16 @@
             <div class="col-lg-12 portfolio-info">
               <br>
               <h2 style="color:#12d640">Wellvoyage</h2>
-              <ul>
+              <!--<ul>
                 <li><strong>Tech Stack</strong>: Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
                 <li><strong>Github URL</strong>: <a href="https://swarac.github.io/" target="_blank">Project Link</a></li>
-              </ul>
+              </ul>-->
   
                 <p>
-                  Wellvoyage, a mobile application, helps to prepare medical trainees for safe global health engagement by providing a centralized resource for region-specific medical, cultural, and demographic information.
+                  Founded and developed Wellvoyage, a mobile application that helps to prepare medical trainees for safe global health engagement by providing a centralized resource for region-specific medical, cultural, and demographic information.
                 </p>
                  <p>
-                  <img src="../assets/img/project/eposter.png" alt="">
+                  <a href="../assets/img/project/eposter.png" target="_blank">  <img src="../assets/img/project/eposter_400.png" alt="WellVoyage">   </a>
 
                 </p>
                 <p>
