--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -54,10 +54,9 @@
                 </p>
                  <p>
                   <a href="../assets/img/project/eposter.png" target="_blank">  <img src="../assets/img/project/eposter_400.png" alt="WellVoyage">   </a>
-
                 </p>
                 <p>
-                  Swara's addition in twiter
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/h7JJb0Ndb0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
             </div>
   
