--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <img src="assets/img/swara.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Swara Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <p>I am Swara Chokshi, a senior at Princess Anne High School for the International Baccalaureate Program, and a resident of Virginia Beach, VA. I love to spend quality time with my family and nature. Also, I enjoy venturing into various artistic mediums from pencil sketching to paper engineering to graphic design. I am always excited to explore new ideas and am highly interested in pursuing medicine in the future. As the founder and developer of Wellvoyage, a mobile application regarding global health, I am passionate about promoting wellness and using technology for the betterment of our society.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -138,49 +138,49 @@
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Software Development</h3>
+            <h3>Medicine</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #5578ff;"></i>
-            <h3>Machine Learning</h3>
+            <h3>Technology</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-camera-3-line" style="color: #e80368;"></i>
-            <h3>Computer Vision</h3>
+            <h3>Graphic Design</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class="ri-english-input" style="color: #1c7d32;"></i>
-            <h3>Natural Language Processing</h3>
+            <h3>Community Service</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
-            <h3>Software Engineering</h3>
+            <h3>Teaching</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
-            <h3>Visualization</h3>
+            <h3>Languages</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-file-list-3-line" style="color: #47aeff;"></i>
-            <h3>Algorithms</h3>
+            <h3>3D Cardmaking</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-image-line" style="color: #ffc107;"></i>
-            <h3>Image Processing</h3>
+            <h3>Musical Instruments</h3>
           </div>
         </div>
       </div>
@@ -230,8 +230,8 @@
           </div>
         </div>
       </div>
-
-
+<!--Online Certification-->
+<!--
     <div class="portfolio">
     <div class="container">
       <div class="section-title">
@@ -318,9 +318,24 @@
     </div>
 
   </section>
+  -->
   <!-- End Education Section -->
 
+  <div class="portfolio">
+    <div class="container">
+      <div class="section-title">
+        <h2>Online Certification</h2>
+      </div>
 
+      <div class="row portfolio-container" style="position: relative; height: 437.75px;">
+
+         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+          <div class="portfolio-wrap">
+            <p>xcghdfg</p>
+              </div>
+            </div>
+           </div>
+          </div>
 
   <!-- Start Experience Section -->
 
