--- a/index.html
+++ b/index.html
@@ -320,18 +320,40 @@
   </section>
   -->
   <!-- End Education Section -->
-
   <div class="portfolio">
     <div class="container">
       <div class="section-title">
-        <h2>Online Certification</h2>
+        <h2>Honors</h2>
       </div>
 
-      <div class="row portfolio-container" style="position: relative; height: 437.75px;">
+      <div class="row portfolio-container" style="position: relative;">
 
-         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+         <div class="col-lg-11 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div class="portfolio-wrap">
-            <p>xcghdfg</p>
+            <li>1st Place Winner (International), The Lancet Global Health Best Student Poster Competition, $500 prize (2021).</li>
+            <br>
+            <li>Accepted to and presented at Consortium of Universities for Global Health conference (2021).</li>
+            <br>
+            <li>1st Place Winner (National), Congressional App Challenge, invited to present at U.S. Capitol (2021).</li>
+            <br>
+            <li>Gold (National), The President’s Volunteer Service Award (2020 - 2021).</li>
+            <br>
+            <li>1st Place Winner (Regional), Academic WorldQuest Competition, selected for national competition (2018 - 2021).</li>
+            <br>
+            <li>1st Place Winner (Regional), 2nd Place Winner (State), Virginia High School League Scholastic Bowl (2018 - 2021).</li>
+            <br>
+            <li>1st Place Winner (State), Youth Alcohol & Drug Abuse Prevention Project Wheeler Award, $750 grant (2020).</li>
+            <br>
+            <li>1st Place Winner (Regional), PTA Reflections Photography Competition (2020).</li>
+            <br>
+            <li>Virginian Pilot Scholastic Achievement Honoree (2020).</li>
+            <br>
+            <li>  Accepted to and attended Harvard UNICEF Conference (2020).</li>
+            <br>
+            <li> Accepted through audition and performed as a violinist in Senior Regional Orchestra in VA District II (2018 - 2019).</li>
+            <br>
+            <li>  1st Place Winner (Regional), Taste of India Musical Instruments, Public Speaking, and Rangoli Art Competitions (2018 - 2019).</li>
+              
               </div>
             </div>
            </div>
